internal: version marker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -165,5 +165,5 @@ branch = true
 parallel = true
 omit = ["src/collective/folderishcollection/locales/*.py"]
 
-[tool.zest.releaser]
+[tool.zest-releaser]
 python-file-with-version = "src/collective/folderishcollection/__init__.py"
