--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,12 @@ test = [
     "pytest-plone>=0.5.0",
 ]
 
+release = [
+    "zest.releaser[recommended]",
+    "zestreleaser.towncrier",
+    "zest.pocompile",
+]
+
 [project.urls]
 Homepage = "https://github.com/collective/collective.folderishcollection"
 PyPI = "https://pypi.org/project/collective.folderishcollection"
